--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meu Perfil</title>
-
+    <title>Portfolio | DevSuperior</title>
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header class="nav-container">
       <nav class="nav-main">
-        <a class="nav-brand" href="">Dev Full Stack</a>
+        <div class="logo-brand">
+        <a href="#">Dev Full Stack</a>
+      </div>
         <ul class="menu-items">
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#about">About</a></li>
           <li>
-            <a href="https://github.com/devsuperior" target="_blank">Contact</a>
+            <a href="https://www.instagram.com/gabreoc" target="_blank">Contact</a>
           </li>
         </ul>
       </nav>
@@ -31,34 +30,37 @@
     <main>
       <section class="profile-container">
         <div class="profile-avatar">
-          <img src="img/profile.svg" alt="Meu perfil" />
+          <img src="Photos/Profile Image.png" alt="Profile image" />
         </div>
+        <!-- <div class="profile-title"> -->
         <h1 class="profile-title">Alex Brown</h1>
-        <p class="profile-description">Full stack - Spring - React</p>
+        <p class="profile-description">Full Stack - Spring - React</p>
+      <!-- </div> -->
       </section>
       <section id="portfolio">
-        <h2 class="portfolio-title">Portfolio</h2>
-
+        <h1 class="portfolio-title">Portfolio</h1>
         <div class="portfolio-container">
-          <img class="portfolio-item" src="img/portfolio1.png" alt="Portfolio 1" />
-          <img class="portfolio-item" src="img/portfolio2.png" alt="Portfolio 2" />
-          <img class="portfolio-item" src="img/portfolio3.png" alt="Portfolio 3" />
-          <img class="portfolio-item" src="img/portfolio4.png" alt="Portfolio 4" />
-          <img class="portfolio-item" src="img/portfolio5.png" alt="Portfolio 5" />
-          <img class="portfolio-item" src="img/portfolio6.png" alt="Portfolio 6" />
+          <img class="portfolio-item" src="Photos/Frame 1.png" alt="Photo 1" srcset="" />
+          <img class="portfolio-item" src="Photos/Frame 2.png" alt="Photo 2" srcset="" />
+          <img class="portfolio-item" src="Photos/Frame 3.png" alt="Photo 3" srcset="" />
+          <img class="portfolio-item" src="Photos/Frame 4.png" alt="Photo 4" srcset="" />
+          <img class="portfolio-item" src="Photos/Frame 5.png" alt="Photo 5" srcset="" />
+          <img class="portfolio-item" src="Photos/Frame 6.png" alt="Photo 6" srcset="" />
         </div>
       </section>
     </main>
     <footer>
-      <div class="footer-title">Siga-nos</div>
-      <div class="social-container">
-        <a href="https://instagram.com/devsuperior.ig"
-          ><img src="img/instagram.png" alt="Instagram"
+      <div class="footer-container">
+      <div class="follow">Siga-nos</div>
+      <div class="icons">
+        <a href="https://www.instagram.com/gabreoc"
+          ><img src="Icons/image 10.svg" alt=""
         /></a>
-        <a href="https://youtube.com/devsuperior"
-          ><img src="img/youtube.png" alt="Youtube"
+        <a href="https://www.youtube.com.br"
+          ><img src="Icons/image 9.svg" alt=""
         /></a>
       </div>
+    </div>
     </footer>
   </body>
 </html>
